--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
     "copyfiles": "^2.4.1",
     "dotenv": "^16.4.5",
     "nyc": "^15.1.0",
     "rimraf": "^5.0.5",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
   }
 }
