Corrected call working end to end

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
+    "@types/swagger-ui-express": "^4.1.6",
     "copyfiles": "^2.4.1",
     "dotenv": "^16.4.5",
     "nyc": "^15.1.0",
@@ -24,6 +25,9 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
+    "helmet": "^7.1.0",
+    "swagger-ui-express": "^5.0.0"
   }
 }
