--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,9 @@
-FROM nginx:alpine
+FROM nginx
 
 ENV UPSTREAM_SERVER=http://localhost:3000
 
 COPY src /usr/share/nginx/html
 
-RUN rm /etc/nginx/conf.d/default.conf
-
-COPY ./config/default.conf /etc/nginx/conf.d/
+COPY ./config/default.conf.template /etc/nginx/templates/
 
 EXPOSE 80
-
-CMD /bin/sh -c "envsubst '\$UPSTREAM_SERVER' < /etc/nginx/conf.d/default.conf > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
