--- a/frontend/config/default.conf.template
+++ b/frontend/config/default.conf.template
@@ -1,12 +1,14 @@
 server {
     listen 80;
+    
+    location /api/ {
+        rewrite ^/api/(.*) /$1 break;
+        proxy_pass ${UPSTREAM_SERVER};
+    }
+
     location / {
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri $uri/ /index.html;
-    }
-
-    location /api {
-        proxy_pass $UPSTREAM_SERVER;
     }
 }
