--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
+    "@types/sinon": "^17.0.3",
     "@types/swagger-ui-express": "^4.1.6",
     "copyfiles": "^2.4.1",
     "dotenv": "^16.4.5",
